<resources>
    <string name="app_name">RPS_Ch5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vsPlayer_message">Bermain suit melawan\nsesama pemain.</string>
    <string name="vsComputer_message">Bermain suit melawan\nkomputer</string>
    <string name="landing_page3_msg">Tuliskan nama kamu dibawah</string>
    <string name="pvp_msg">%1$s VS PEMAIN</string>
    <string name="pvc_msg">%1$s VS COMPUTER</string>
    <string name="welcome_msg">Selamat Datang %1$s</string>
    <string name="title">Kertas\nGunting\nBatu</string>
    <string name="batuChoice">Batu</string>
    <string name="kertasChoice">Kertas</string>
    <string name="guntingChoice">Gunting</string>
    <string name="start_game">VS</string>
    <string name="player_win">%1$s\nMENANG!</string>
    <string name="opponent_win">%1$s\nMENANG!</string>
    <string name="draw">draw</string>
    <string name="player_name">%1$s</string>
    <string name="opponent_name">%1$s</string>
    <string name="win">win</string>
    <string name="lose">"lose</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="pilih_lawanmu">PILIH LAWANMU</string>
</resources>